--- a/Exercise/Module -  06. Object Oriented Programming.ipynb
+++ b/Exercise/Module -  06. Object Oriented Programming.ipynb
@@ -18,7 +18,8 @@
      "text": [
       "2016 Audi A4\n",
       "A simple attempt to represent a car.\n",
-      "audi\n"
+      "<__main__.Car object at 0x0000019A40B91A58>\n",
+      "{'make': 'audi', 'model': 'a4', 'year': 2016}\n"
      ]
     }
    ],
@@ -39,7 +40,8 @@
     "my_new_car = Car('audi', 'a4', 2016)\n",
     "print(my_new_car.get_descriptive_name())\n",
     "print(my_new_car.__doc__)\n",
-    "print(my_new_car)"
+    "print(my_new_car)\n",
+    "print(my_new_car.__dict__)"
    ]
   },
   {
@@ -54,22 +56,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'type'>\n",
+      "<class '__main__.Date'>\n",
+      "<class '__main__.Date'>\n"
+     ]
+    }
+   ],
    "source": [
-    "class MyClass:\n",
-    "    def method(self):\n",
-    "        return 'instance method called', self\n",
+    "class Date():\n",
+    "\n",
+    "    def __init__(self, day=0, month=0, year=0):\n",
+    "        self.day = day\n",
+    "        self.month = month\n",
+    "        self.year = year\n",
     "\n",
     "    @classmethod\n",
-    "    def classmethod(cls):\n",
-    "        return 'class method called', cls\n",
+    "    def from_string(cls, date_as_string):   # cls holds the class object\n",
+    "        print(cls)\n",
+    "        day, month, year = map(int, date_as_string.split('-'))\n",
+    "        date1 = cls(day, month, year)      # cls object is used to create Date object\n",
+    "        return date1\n",
     "\n",
     "    @staticmethod\n",
-    "    def staticmethod():\n",
-    "        return 'static method called'\n",
-    " "
+    "    def is_date_valid(date_as_string):\n",
+    "        day, month, year = map(int, date_as_string.split('-'))\n",
+    "        return day <= 31 and month <= 12 and year <= 3999\n",
+    "    \n",
+    "# x = Date()\n",
+    "# x = Date\n",
+    "# print(type(x))\n",
+    "\n",
+    "# date = x()\n",
+    "# print(type(date))\n",
+    "\n",
+    "date2 = Date.from_string('11-09-2012')\n",
+    "print(type(date2))\n",
+    "\n",
+    "\n",
+    "# is_date = Date.is_date_valid('11-09-2012')\n",
+    "# print(is_date)\n"
    ]
   },
   {
@@ -81,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +147,7 @@
        "From __repr__ Jane"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +194,14 @@
     "print(cust())\n",
     "print(cust(\"abc\"))\n",
     "\n",
-    "# in str() and repr() you r forced to return str object __call__() can return any type of value and value can also be passed as parameter "
+    "# in str() and repr() you r forced to return str object. __call__() can return any type of value and value can also be passed as parameter "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task:  Create a list of 5 Employee objects and sort them as per their salary."
    ]
   },
   {
@@ -202,17 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m of C called\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Case 1: \n",
     "\n",
@@ -237,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +330,7 @@
        "(__main__.D, __main__.B, __main__.C, __main__.A, object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
