--- a/Solutions/Module -  03. Data Structures.ipynb
+++ b/Solutions/Module -  03. Data Structures.ipynb
@@ -425,10 +425,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 13}\n",
+      "{1, 2, 3, 5}\n",
+      "{8, 13}\n",
+      "{4, 6, 7}\n",
+      "{4, 6, 7, 8, 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 1, 2, 3, 5, 8, 13] \n",
+    "b = [1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "set_a = set(a)\n",
+    "set_b = set(b)\n",
+    "\n",
+    "print(set_a | set_b) # Union\n",
+    "print(set_a & set_b) # Intersection\n",
+    "print(set_a - set_b) # only a\n",
+    "print(set_b - set_a) # only b\n",
+    "print(set_a ^ set_b) # uncommon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 5}\n",
+      "{1, 2, 3, 5, 8, 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set_a.intersection(set_b))\n",
+    "print(set_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 8, 13]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(set_a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,10 +518,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'India': 'Rs', 'Italy': 'Euros', 'Thailand': 'Bhat', 'UK': 'GBP', 'USA': 'Dollars', 'France': 'Euros', 'Japan': 'Yen'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print(country_currency['India'])\n",
+    "# print(country_currency.get('Brazil','Country not present'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'India': 'Rs', 'Italy': 'Euros', 'Thailand': 'Bhat', 'UK': 'GBP', 'USA': 'Dollars', 'France': 'Euros', 'Japan': 'Yen'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_currency['India'] = 'Rs'\n",
+    "country_currency['Japan'] = 'Yen'\n",
+    "print(country_currency)\n",
+    "len(country_currency)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,10 +583,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "India  -  Rs\n",
+      "Italy  -  Euros\n",
+      "Thailand  -  Bhat\n",
+      "UK  -  GBP\n",
+      "USA  -  Dollars\n",
+      "France  -  Euros\n",
+      "Japan  -  Yen\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(list(country_currency.keys()))\n",
+    "# print(list(country_currency.values()))\n",
+    "for country in country_currency.keys():\n",
+    "    print(country, country_currency[country], sep=\"  -  \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "India - Rupees\n",
+      "Italy - Euros\n",
+      "Thailand - Bhat\n",
+      "UK - GBP\n",
+      "USA - Dollars\n",
+      "France - Euros\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = list(country_currency.keys())\n",
+    "currencies = list(country_currency.values())\n",
+    "\n",
+    "for i,j in zip(countries,currencies):\n",
+    "    print(i,j,sep=\" - \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "India - Rupees\n",
+      "Italy - Euros\n",
+      "Thailand - Bhat\n",
+      "UK - GBP\n",
+      "USA - Dollars\n",
+      "France - Euros\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for k,v in country_currency.items():\n",
+    "#     print(k,v,sep=\" - \")\n",
+    "    \n",
+    "for i in country_currency.items():\n",
+    "    print(i[0],i[1],sep=\" - \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -483,10 +668,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['France', 'India', 'Italy', 'Thailand', 'UK', 'USA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = sorted(country_currency)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 1:\n",
+    "student = {'name' : \"Jane\", 'marks' : [60,40,80]}\n",
+    "    \n",
+    "1. Create a collection of 5 student objects.\n",
+    "2. Display the name and total marks in tablular format\n",
+    "\n",
+    "### Task 2:\n",
+    "WAP to print the name of the country from dictionary country_currency <br>\n",
+    "when the currency value is entered"
+   ]
   }
  ],
  "metadata": {
